--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,7 +16,7 @@
   <body>
     <header class="navbar-fixed">
       <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper blue-grey darken-3">
           <ul>
             <li>
               <a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;Day Hop</a>
@@ -24,8 +24,8 @@
           </ul>
           <ul class="right">
             {% if user.is_authenticated %}
-            <li><a href="{% url 'posts_index' %}">Posts</a></li>
-            <li><a href="{% url 'posts_create' %}">New Post!</a></li>
+            <li><a href="{% url 'posts_index' %}">View Posts</a></li>
+            <li><a href="{% url 'posts_create' %}">Create Post</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
             {% else %}
             <li><a href="{% url 'login' %}">Login</a></li>
@@ -36,8 +36,8 @@
       </nav>
     </header>
     <main class="container">{% block content %} {% endblock %}</main>
-    <footer class="page-footer">
-      <div class="right">All Rights Reserved, © 2022 Day Hop
+    <footer class="page-footer blue-grey darken-3">
+      <div class="right-align">All Rights Reserved, © 2022 Day Hop&nbsp;&nbsp;</div>
     </footer>
   </body>
 </html>
