--- a/main_app/templates/post/index.html
+++ b/main_app/templates/post/index.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %} {% block content %}
-<h1>Post Index</h1>
+<h1>Your Posts!</h1>
 
 {% for post in posts %}
-<div class="card">
-    <div class="card-content">
-        <p>{{ post.date }}</p>
-        <span class="card-title">{{ post.title }}</span>
+<div class="row">
+  <div class="col s12 m12">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">{{ post.date }} - {{ post.title }}</span>
         <p>{{ post.body }}</p>
-        <div class="card-action">
-            <a href="{% url 'date' post.id %}">View previous posts on this day!</a>
-            {% comment %} <a href="{% url 'posts_update' post.id %}">Edit</a>
-            <a href="{% url 'posts_delete' post.id %}">Delete</a> {% endcomment %}
-            <a href="{% url 'posts_detail' post.id %}">View/Update</a>
-        </div>
+      </div>
+      <div class="card-action">
+        <a href="{% url 'date' post.id %}">Posts you made on this day!</a>
+        <a href="{% url 'posts_detail' post.id %}">Update</a>
+      </div>
     </div>
+  </div>
 </div>
 {% endfor %}
 
