--- a/main_app/templates/main_app/post_form.html
+++ b/main_app/templates/main_app/post_form.html
@@ -1,15 +1,21 @@
 {% extends 'base.html' %} {% block content %} {% if object %}
 <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
 {% else %}
-<h1>New Post!</h1>
+<h1>New Post</h1>
 {% endif %}
-<form action="" method="post">
+<form id='creaet_post' action="" method="post">
     {% csrf_token %}
     <table>
         {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit!" class="btn" />
+    <input type="submit" value="Create Post!" class="btn blue-grey darken-1" />
 </form>
+{% comment %} <button type="submit" for="create_post" class="btn blue-grey darken-1">Create Post
+    <i class="material-icons right">send</i>
+</button>
+<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+  </button> {% endcomment %}
 <script>
     var dateEl = document.getElementById('id_date');
     M.Datepicker.init(dateEl, {
