--- a/main_app/templates/post/date.html
+++ b/main_app/templates/post/date.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %} {% block content %}
-<h1>Date</h1>
 
+<h1>Posts on {{ day }}</h1>
+{% comment %} posts[0] {% endcomment %}
 {% for post in posts %}
-<div class="card">
-        <div class="card-content">
-            <p>{{ post.date }}</p>
-            <span class="card-title">{{ post.title }}</span>
-            <p>{{ post.body }}</p>
-            <div class="card-action">
+<div class="row">
+    <div class="col s12 m12">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">{{ post.date }} - {{ post.title }}</span>
+          <p>{{ post.body }}</p>
         </div>
+        <div class="card-action">
+          <a href="{% url 'posts_detail' post.id %}">Update</a>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 {% endfor %}
 
 {% endblock %}
