--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -5,6 +5,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <input type="hidden" name="next" value="{{ next }}" />
-    <input class="btn blue" type="submit" value="login" />
+    <input class="btn blue-grey darken-1" type="submit" value="login" />
 </form>
 {% endblock %}
