--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -8,6 +8,6 @@
 <form action="{% url 'signup' %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input class="btn blue" type="submit" value="Create Account" />
+    <input class="btn blue-grey darken-1" type="submit" value="Create Account" />
 
 {% endblock %}
