--- a/main_app/templates/main_app/post_confirm_delete.html
+++ b/main_app/templates/main_app/post_confirm_delete.html
@@ -8,7 +8,7 @@
  
 <form action="" method="POST">
     {% csrf_token %}
-    <input type="submit" value="Yes - Delete!" class="btn" />
-    <a href="{% url 'posts_detail' post.id %}">Cancel</a>
+    <input type="submit" value="Yes - Delete!" class="btn red" />
+    <button class='btn blue-grey darken-1'><a href="{% url 'posts_detail' post.id %}" style='color: white;'>Cancel</a></button>
   </form>
-{% endblock %}
+{% endblock %} 
