--- a/main_app/templates/main_app/post_form.html
+++ b/main_app/templates/main_app/post_form.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %} {% if object %}
+{% extends 'base.html' %} {% block content %} 
+{% if object %}
 <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
 {% else %}
 <h1>New Post</h1>
@@ -8,14 +9,12 @@
     <table>
         {{ form.as_table }}
     </table>
+    {% if object %}
+    <input type="submit" value="Update" class="btn blue-grey darken-1" />
+    {% else %}
     <input type="submit" value="Create Post!" class="btn blue-grey darken-1" />
+    {% endif %}
 </form>
-{% comment %} <button type="submit" for="create_post" class="btn blue-grey darken-1">Create Post
-    <i class="material-icons right">send</i>
-</button>
-<button class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right">send</i>
-  </button> {% endcomment %}
 <script>
     var dateEl = document.getElementById('id_date');
     M.Datepicker.init(dateEl, {
