--- a/main_app/templates/post/detail.html
+++ b/main_app/templates/post/detail.html
@@ -1,16 +1,19 @@
 {% extends 'base.html' %} {% block content %}
 <h1>Post Detail</h1>
 
-<div class="card">
-    <div class="card-content">
-        <p>{{ post.date }}</p>
-        <span class="card-title">{{ post.title }}</span>
-        <p>{{ post.body }}</p>
+<div class="row">
+    <div class="col s12 m12">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">{{ post.date }} - {{ post.title }}</span>
+          <p>{{ post.body }}</p>
+        </div>
         <div class="card-action">
             <a href="{% url 'posts_update' post.id %}">Edit</a>
             <a href="{% url 'posts_delete' post.id %}">Delete</a>
         </div>
+      </div>
     </div>
-</div>
+  </div>
 
 {% endblock %}
