--- a/main_app/templates/post/index.html
+++ b/main_app/templates/post/index.html
@@ -1,6 +1,20 @@
 {% extends 'base.html' %} {% block content %}
 <h1>Your Posts!</h1>
-
+{% if no_posts %}
+<div class="row">
+  <div class="col s12 m12">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">No Posts Yet!</span>
+        <p>Your created posts will show up here</p>
+      </div>
+      <div class="card-action">
+        <a href="{% url 'posts_create' %}">Create Post</a>
+      </div>
+    </div>
+  </div>
+</div>
+{% else %}
 {% for post in posts %}
 <div class="row">
   <div class="col s12 m12">
@@ -17,5 +31,7 @@
   </div>
 </div>
 {% endfor %}
+
+{% endif %}
 
 {% endblock %}
