--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -6,10 +6,11 @@
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title">About Day Hop</span>
-          <p>Can you remember your life? I can't... 
+          <p>Can you remember your life? I can't,
             that's why I made Day Hop! An app that lets you write a tweet sized post about what you did on a particular day. 
-            Give it a title, give it a body, (change the date if you forgot to post yesterday..) and you're all set.
-            BUT WAIT! THERE IS MORE! You can also see what post you made on any day a year ago... and the year before that... and the year before that... etc</p>
+            Give it a title, give it a body, (change the date if you forgot to post yesterday) and you're all set.</p>
+          </br>
+          <p>BUT WAIT! THERE IS MORE! You can also see what post you made on any day a year ago... and the year before that... and the year before that... etc</p>
         </div>
       </div>
     </div>
