--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,10 +7,10 @@
         <div class="card-content white-text">
           <span class="card-title">About Day Hop</span>
           <p>Can you remember your life? I can't,
-            that's why I made Day Hop! An app that lets you write a tweet sized post about what you did on a particular day. 
+            that's why I made Day Hop! An app that lets you write a tweet-sized post about what you did on a particular day. 
             Give it a title, give it a body, (change the date if you forgot to post yesterday) and you're all set.</p>
           </br>
-          <p>BUT WAIT! THERE IS MORE! You can also see what post you made on any day a year ago... and the year before that... and the year before that... etc</p>
+          <p>BUT WAIT! THERE IS MORE! You can also see what post you made on any day a year ago... and the year before that... and the year before that... etc.</p>
         </div>
       </div>
     </div>
@@ -20,7 +20,7 @@
     <div class="col s12 m12">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title">Your Next Steps...</span>
+          <span class="card-title">Your Next Steps</span>
         {% if user.is_authenticated %}
           <p>You're ready to make a post! Create a Post or View your previous Posts</p>
         </div>
